Start removing reimplemented methods from ContainerShop. Implement more methods inside SimpleShopWorldAdapter.